# SerialPort

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  SerialPort.c  SerialPort.h  SerialPort.ppj  SerialPort.ppw
demo/: SerialPortDemo.ppj  main.c  main.h  main.rc  res1.xml
